--- a/TODO
+++ b/TODO
@@ -1,15 +1,28 @@
-According to WSRF spec., messages should contain
-a wsa:To element in the SOAP:Header.
-wsa=http://www.w3.org/2005/08/addressing/
-Need to alter gSoap headers so this element is
-included. - DONE - need to test...
-
 Continue working on altering reg_wsrf_tools to 
-work with latest form of secure api.
-
-Rename Create_WSSE_header to Create_WSRF_header
-to indicate that it doesn't just do security now.
+work with latest form of secure api. - TEST
 
 Remove some unecessary malloc's from the
 WSRF steering code.
+
+Continue work on wrapping proxy IO
+
+Utils routine for IOType browsing?
+
+Make the Msg_type an ENUM?
+
+Full API doc in Doxygen form
+
+Doxygen for reg_steer_tools?
+
+gSoap stub generator into CVS
+
+update steerer manual
+
+update launcher manual?
+
+Use html table for RegistryBrowser?
+
+Add viz launcher functionality to RegistryBrowser
+
+Is Record_checkpoint_set_wsrf OK?
 
