Moved the security additions around

--- a/docs/ReG_Steering_Web_Service.tex
+++ b/docs/ReG_Steering_Web_Service.tex
@@ -34,7 +34,7 @@ Manchester,\\M13 9PL.}
 Version & Author & Notes & Date \\
 \hline
 0.1 & A.~R.~Porter & Initial draft --- work in progress alongside implementation & 06/07/2005\\
-0.2 & A.~R.~Porter & Work following addition of security and implementation of registry & 10/03/2006\\
+0.2 & A.~R.~Porter & Work following addition of security and implementation of registry & 13/03/2006\\
 \hline\hline
 \end{tabular}
 \end{center}
@@ -194,6 +194,133 @@ $ans =  WSRF::Lite
 
 %---------------------------------------------------------------------
 
+\begin{section}{Security for the SWS and the Registry}
+\label{sec:security}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=14.0cm]{steer_ws_security.eps}
+\end{center}
+\caption{Illustration of the various connections that must be secured
+within the RealityGrid framework.}
+\label{fig:arch}
+\end{figure}
+Access to the registry, its entries and any actual SWS is controlled in
+two ways; via SSL and e-Science X.509 certificates or via WS-Security
+(WSSE) username and password.  The latter is essential in freeing us from
+the requirement that a steerable application have access to an X.509 
+certificate --- instead, it authenticates to the SWS using a passphrase
+which is given to the SWS when it is created. In principle, each of
+the remaining components in the architecture (shown in figure~\ref{fig:arch})
+can have access to an
+X.509 certificate and could therefore use mutually-authenticated SSL
+which provides both authentication and encryption.
+
+\begin{subsection}{The Registry}
+The Registry may be secured using just WSSE or both WSSE and SSL.  For the
+latter, it must be hosted in a secure WSRF::Lite container that has access to
+a server X.509 certificate.  In our implementation, SSL takes priority over
+WSSE so that a WSSE username/password is only checked for if no client
+certificate is provided.  Every Registry must be given a passphrase when
+it is created (using either \texttt{reg\_wsrf\_scripts/createReGFramework.pl}
+or \texttt{reg\_wsrf\_scripts/createRegistry.pl}), irrespective of whether 
+it will use SSL.  This allows those
+services that do not have access to an X.509 certificate (such as the web-based
+registry browser) to authenticate
+themselves to the registry.
+\end{subsection}
+
+\begin{subsection}{Launching}
+\label{sec:Launching}
+The launching of a steerable job ({\it i.e.}\ one that has a SWS
+associated with it) involves contacting a (WSRF::Lite) container,
+creating the SWS and initializing it with a passphrase.  If the
+container is secured using SSL (for which it requires access to a
+server X.509 certificate), then the communication during this step is
+encrypted and the passphrase for the SWS cannot be intercepted.
+However, if the container is not secured then the passphrase for the
+SWS will be transmitted in plain text at this stage.  If the client
+authenticates to the Container using SSL then the Distinguished Name
+(DN) of the client certificate is taken to be the identity of the root
+user of the SWS.  If WSSE is used, then the supplied username is used
+instead.
+
+Once the SWS has been created, it must be registered.  This consists
+of the client that created the SWS making a call to the \texttt{Add}
+method of the Registry.  If the client authenticates to the Registry
+using SSL then the DN of the client certificate is taken to be the
+identity of the owner of that registry entry.  If WSSE is used, then
+the supplied username is used instead.  An example of the Content
+supplied when registering the SWS is shown in
+figure~\ref{fig:contentXML}.  As can be seen, the
+\texttt{componentContent} is augmented by a separate
+\texttt{regSecurity} section which holds the passphrase of the SWS and
+an array of users who have access to it.  The regServiceGroup code
+uses this information to authenticate calls to get the {\bf Entry}
+ResourceProperty while regServiceGroupEntry uses it to authenticate
+calls that manage the registry entry itself ({\textit e.g.}\ attempts
+to destroy it). Note that although \texttt{regSecurity} is a part of
+the \texttt{Content} stored by the registry, the regServiceGroup
+removes it before returning the \texttt{Content} to a user.
+
+\begin{figure}
+\begin{verbatim}
+<Content>
+  <registryEntry>
+    <serviceType>SWS</serviceType>
+    <componentContent>
+      <componentStartDateTime>2006-03-13T12:46:38Z</componentStartDateTime>
+      <componentCreatorName>/C=UK/O=eScience/OU=Manchester/L=MC/CN=andrew porter</componentCreatorName>
+      <componentCreatorGroup>RSS Group</componentCreatorGroup>
+      <componentSoftwarePackage>mini_app</componentSoftwarePackage>
+      <componentTaskDescription>test wsrf work</componentTaskDescription>
+    </componentContent>
+    <regSecurity>
+      <passphrase>somethingcunning</passphrase>
+      <allowedUsers>
+        <user>/C=UK/O=eScience/OU=Manchester/L=MC/CN=andrew porter</user>
+      </allowedUsers>
+    </regSecurity>
+  </registryEntry>
+</Content>
+\end{verbatim}
+\caption{Example of the Content supplied when registering a SWS.}
+\label{fig:contentXML}
+\end{figure}
+When the program to be steered begins running, it must periodically contact the SWS.
+Since it has no X.509 certificate it must authenticate to the SWS using WSSE.  The
+steering library uses the username ``application'' and obtains the 
+passphrase from the REG\_PASSPHRASE environment variable.
+\end{subsection}
+
+
+\begin{subsection}{On-line visualization}
+On-line visualization (or any other configuration requiring data be sent from one
+component to another) is achieved by direct socket connection between the 
+simulation and visualization components.  Achieving such a connection requires
+that the visualization component know where to connect to.  It retrieves this
+information from the SWS associated with the simulation (indicated by the arrow labelled ``Connect'' in figure~\ref{fig:arch}).  Since it has no
+certificate, it must use WSSE to authenticate to the simulation SWS and therefore
+must have its passphrase.  This requirement is satisfied by ensuring that the same 
+passphrase is given to each of the SWSs representing components that will be 
+connected in some way.
+\end{subsection} 
+
+\begin{subsection}{Clean-up on job completion}
+As indicated by the ``Unregister'' arrow in figure~\ref{fig:arch}, the SWS contacts
+the Registry directly once the job has finished and the SWS is about to be destroyed.
+Since the SWS has no X.509 certificate, authentication for this step is again via
+WSSE.  The passphrase of the SWS is used to authenticate to the regServiceGroupEntry
+service when calling its \texttt{Destroy} method.  As described in 
+section~\ref{sec:Launching}, the
+regServiceGroupEntry is able to check the passphrase since it is stored in the
+\texttt{regSecurity} section of the {\bf Entry} ResourceProperty.
+\end{subsection}
+
+\end{section}
+
+%---------------------------------------------------------------------
+
 \begin{section}{The Registry service}
 \label{sec:registry_service}
 
@@ -239,13 +366,29 @@ In this section we will walk through the actions that must be taken in
 order to steer an application via the SWS.
 
 \begin{subsection}{Discovering the application}
-To be implemented but ServiceGroups in WSRF are very similar to those
-in OGSI.
+When a client ({\it e.g.}\ a steering client) needs to know what
+services are currently available, it must retrieve the {\bf Entry}
+ResourceProperty from the Registry.  As described earlier, SSL or WSSE
+can be used to authenticate this call.  The registry will only return
+entries that the caller (as identified by their DN or username) is
+authorised to see (as controlled by the \texttt{allowedUsers} array in
+the \texttt{regSecurity} part of an entry's Content).
 \end{subsection}
 
 \begin{subsection}{Attaching to the application}
-Client calls the \texttt{Attach} method (no arguments) on the SWS.
-Returns an XML document describing the commands that the application
+In order to be able to steer a job, a user must be able to authenticate to the
+SWS.  If the SWS is hosted by a secure container then the user can authenticate
+using SSL and will be granted access provided their DN is in the list of the SWS' 
+allowed users.  If SSL is not available then the user may authenticate using
+WSSE which of course requires that they know the passphrase of the SWS.
+
+A user may be added to an SWS' list of allowed users by using the 
+\texttt{SetResourceProperties} method to add their DN to the {\bf user}
+ResourceProperty (see section~\ref{sec:swsMethods}).
+
+Provided they can authenticate successfully, the client calls the 
+\texttt{Attach} method (no arguments) on the SWS.
+This returns an XML document describing the commands that the application
 supports.  This document conforms to the RealityGrid steering schema.
 \end{subsection}
 
@@ -426,150 +569,6 @@ SetResourceProperties & Set the value of one or more RPs
 are standard WS-RF methods (only the most useful of these are listed).}
 \label{table:SWSmethods}
 \end{table}
-
-\end{section}
-%---------------------------------------------------------------------
-
-\begin{section}{Security for the SWS and the Registry}
-\label{sec:security}
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=14.0cm]{steer_ws_security.eps}
-\end{center}
-\caption{Illustration of the various connections that must be secured
-within the RealityGrid framework.}
-\label{fig:arch}
-\end{figure}
-Access to the registry, its entries and any actual SWS is controlled in
-two ways; via SSL and e-Science X.509 certificates or via WS-Security
-(WSSE) username and password.  The latter is essential in freeing us from
-the requirement that a steerable application have access to an X.509 
-certificate --- instead, it authenticates to the SWS using a passphrase
-which is given to the SWS when it is created. In principle, each of
-the remaining components in the architecture (shown in figure~\ref{fig:arch})
-can have access to an
-X.509 certificate and could therefore use mutually-authenticated SSL
-which provides both authentication and encryption.
-
-\begin{subsection}{The Registry}
-The Registry may be secured using just WSSE or both WSSE and SSL.  For the
-latter, it must be hosted in a secure WSRF::Lite container that has access to
-a server X.509 certificate.  In our implementation, SSL takes priority over
-WSSE so that a WSSE username/password is only checked for if no client
-certificate is provided.  Every Registry must be given a passphrase when
-it is created (using either \texttt{reg\_wsrf\_scripts/createReGFramework.pl}
-or \texttt{reg\_wsrf\_scripts/createRegistry.pl}), irrespective of whether 
-it will use SSL.  This allows those
-services that do not have access to an X.509 certificate (such as the web-based
-registry browser) to authenticate
-themselves to the registry.
-\end{subsection}
-
-\begin{subsection}{Launching}
-\label{sec:Launching}
-The launching of a steerable job ({\it i.e.}\ one that has a SWS associated 
-with it) involves contacting a (WSRF::Lite) container, creating the SWS and 
-initializing it with a passphrase.  If the container is secured using SSL (for
-which it requires access to a server X.509 certificate), then the communication
-during this step is encrypted and the passphrase for the SWS cannot be
-intercepted.  However, if the container is not secured then the passphrase
-for the SWS will be transmitted in plain text at this stage.
-If the client authenticates to the Container using SSL then the Distinguished 
-Name (DN) of the client certificate is taken to be the identity of the root user 
-of the SWS.  If WSSE is used, then the supplied username is used instead.
-
-Once the SWS has been created, it must be registered.  This consists of 
-the client that created the SWS making a call to the \texttt{Add} method 
-of the Registry.  If the client authenticates to the Registry 
-using SSL then the DN of the client certificate is taken
-to be the identity of the owner of that registry entry.  If WSSE is used, then
-the supplied username is used instead.  An example of the Content supplied when 
-registering the SWS is shown in figure~\ref{fig:contentXML}.  As can be seen,
-the \texttt{componentContent} is augmented by a separate \texttt{regSecurity} 
-section which holds
-the passphrase of the SWS and an array of users who have access to it.  The
-regServiceGroup code uses this information to authenticate
-calls to get the {\bf Entry} ResourceProperty while regServiceGroupEntry uses it to
-authenticate calls that manage the registry entry itself ({\textit e.g.}\ attempts to
-destroy it). Note that although \texttt{regSecurity} is a part of the 
-\texttt{Content} stored by the registry, the regServiceGroup removes 
-it before returning the \texttt{Content} to a user.
-
-\begin{figure}
-\begin{verbatim}
-<Content>
-  <registryEntry>
-    <serviceType>SWS</serviceType>
-    <componentContent>
-      <componentStartDateTime>2006-03-13T12:46:38Z</componentStartDateTime>
-      <componentCreatorName>/C=UK/O=eScience/OU=Manchester/L=MC/CN=andrew porter</componentCreatorName>
-      <componentCreatorGroup>RSS Group</componentCreatorGroup>
-      <componentSoftwarePackage>mini_app</componentSoftwarePackage>
-      <componentTaskDescription>test wsrf work</componentTaskDescription>
-    </componentContent>
-    <regSecurity>
-      <passphrase>somethingcunning</passphrase>
-      <allowedUsers>
-        <user>/C=UK/O=eScience/OU=Manchester/L=MC/CN=andrew porter</user>
-      </allowedUsers>
-    </regSecurity>
-  </registryEntry>
-</Content>
-\end{verbatim}
-\caption{Example of the Content supplied when registering a SWS.}
-\label{fig:contentXML}
-\end{figure}
-When the program to be steered begins running, it must periodically contact the SWS.
-Since it has no X.509 certificate it must authenticate to the SWS using WSSE.  The
-steering library uses the username ``application'' and obtains the 
-passphrase from the REG\_PASSPHRASE environment variable.
-
-\end{subsection}
-
-\begin{subsection}{Service discovery}
-When a client ({\it e.g.}\ a steering client) needs to know what services
-are currently available, it must retrieve the {\bf Entry} ResourceProperty
-from the Registry.  As described earlier, SSL or WSSE can be used to authenticate
-this call.  The registry will only return entries that the caller (as identified by
-their DN or username) is authorised to see (as controlled by the 
-\texttt{allowedUsers} array in the \texttt{regSecurity} part of an entry's Content).
-\end{subsection}
-
-\begin{subsection}{Steering}
-In order to be able to steer a job, a user must be able to authenticate to the
-SWS.  If the SWS is hosted by a secure container then the user can authenticate
-using SSL and will be granted access provided their DN is in the list of the SWS' 
-allowed users.  If SSL is not available then the user may authenticate using
-WSSE which of course requires that they know the passphrase of the SWS.
-
-A user may be added to an SWS' list of allowed users by using the 
-\texttt{SetResourceProperties} method to add their DN to the {\bf user}
-ResourceProperty (see section~\ref{sec:swsMethods}).
-\end{subsection}
-
-\begin{subsection}{On-line visualization}
-On-line visualization (or any other configuration requiring data be sent from one
-component to another) is achieved by direct socket connection between the 
-simulation and visualization components.  Achieving such a connection requires
-that the visualization component know where to connect to.  It retrieves this
-information from the SWS associated with the simulation (indicated by the arrow labelled ``Connect'' in figure~\ref{fig:arch}).  Since it has no
-certificate, it must use WSSE to authenticate to the simulation SWS and therefore
-must have its passphrase.  This requirement is satisfied by ensuring that the same 
-passphrase is given to each of the SWSs representing components that will be 
-connected in some way.
-\end{subsection} 
-
-\begin{subsection}{Clean-up on job completion}
-As indicated by the ``Unregister'' arrow in figure~\ref{fig:arch}, the SWS contacts
-the Registry directly once the job has finished and the SWS is about to be destroyed.
-Since the SWS has no X.509 certificate, authentication for this step is again via
-WSSE.  The passphrase of the SWS is used to authenticate to the regServiceGroupEntry
-service when calling its \texttt{Destroy} method.  As described in 
-section~\ref{sec:Launching}, the
-regServiceGroupEntry is able to check the passphrase since it is stored in the
-\texttt{regSecurity} section of the {\bf Entry} ResourceProperty.
-\end{subsection}
 
 \end{section}
 
