--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 Upgrade to using gSoap 2.7.6.e because that should(??) fix problems
-on AIX...
+on AIX... - TEST
 
 Continue working on altering reg_wsrf_tools to 
 work with latest form of secure api. - TEST
@@ -16,8 +16,6 @@ Make the Msg_type an ENUM?
 Full API doc in Doxygen form
 
 Doxygen for reg_steer_tools?
-
-gSoap stub generator into CVS
 
 update steerer manual
 
