--- a/TODO
+++ b/TODO
@@ -23,3 +23,5 @@ update launcher manual?
 
 Is Record_checkpoint_set_wsrf OK?
 
+Are Write_sockets and Emit_data_sockets essentially the same?
+Ditto for Write_proxy and Emit_data_proxy...
