--- a/TODO
+++ b/TODO
@@ -27,5 +27,6 @@ Is LD_FLAGS actually used anywhere?
 pruneChkTree.pl - check for "service?" in supplied GSH and, if present, split to get
 the trailing /4783837/37338/39 etc.
 
-Another script to delete a single node from a tree.  Put into ChkTree WS...
+delete a single node from a tree into ChkTree WS...
+
 
